--- a/css/estilo.css
+++ b/css/estilo.css
@@ -126,10 +126,6 @@ footer{
   overflow:hidden;
   width:120%;
   list-style-type: none;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  height: 0%;
 }
 
 #paisaje ul{
@@ -139,24 +135,13 @@ footer{
 
 ul img{
   width:25%;
-  height:10%;
+  height:12%;
   float:left;
   margin:10px 10px 0 0;
   box-shadow: 2px 2px #02010a;
 }
 
-#imagen1,
-#imagen2,
-#imagen3,
-#imagen4,
-#imagen5,
-#imagen6{
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  height: 0%;
-}
+
 
 #imagen1{
   filter: blur(10px);
@@ -227,6 +212,13 @@ footer{
     width: 55%;
   }
 
+  #retrato{
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+  }
+
   #paisaje{
     display: -webkit-flex;
     display: flex;
@@ -240,42 +232,49 @@ footer{
   ul #imagen4,
   ul #imagen5,
   ul #imagen6{
-
+    margin-left: 30%;
   }
 
   ul #imagen1{
-    width: 105%;
+    width: 100%;
     -webkit-order: 2;
     order: 2;
   }
 
   ul #imagen2{
-    width: 105%;
+    width: 100%;
     -webkit-order: 1;
     order: 1;
   }
   ul #imagen3{
-    width: 105%;
+    width: 100%;
     -webkit-order: 4;
     order: 4;
   }
 
   ul #imagen4{
-    width: 105%;
+    width: 100%;
     -webkit-order: 3;
     order: 3;
   }
 
   ul #imagen5{
-    width: 105%;
+    width: 100%;
     -webkit-order: 6;
     order: 6;
   }
 
   ul #imagen6{
-    width: 105%;
+    width: 100%;
     -webkit-order: ;
     order: 5;
+  }
+
+  h1 {
+    text-align: center;
+  }
+  a{
+    text-align: center;
   }
 }
 
